# pyros-common-rosrelease

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  PKGBUILD  README.md  arch.store  debian.store  package.xml  patches.conf  releaser_history.json  requirements.txt  rpm.store  setup.py  tox.ini  tracks.yaml  travis_check.bash  travis_checks.bash
debian/: changelog  control  gbp.conf  rules
indigo/: .travis.yml  CMakeLists.txt  package.xml
kinetic/: CMakeLists.txt  package.xml
pyros_common/: .travis.yml  CHANGELOG.rst
rpm/: ros-indigo-pyros-common.spec  ros-jade-pyros-common.spec  ros-kinetic-pyros-common.spec  template.spec
